--- a/android.html
+++ b/android.html
@@ -33,7 +33,7 @@
 
 
             <p>
-                A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" class="externo">Dan Morril</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank" class="externo">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
+                A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" rel="noopener noreferrer" class="externo">Dan Morril</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" rel="noopener noreferrer" class="externo">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
             </p>
 
             <picture>
@@ -50,7 +50,7 @@
             </h2>
 
             <p>
-                A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/" target="_blank" class="externo">Irina Blok</a>, também funcionária do <strong>Google</strong>, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
+                A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/" rel="noopener noreferrer" class="externo">Irina Blok</a>, também funcionária do <strong>Google</strong>, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
 
             </p>
 
@@ -141,7 +141,7 @@
 
                 </p>
                 <p>
-                     Acesse aqui o site <a href="https://www.android.com/intl/pt_br/" target="_blank" class="externo">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema <strong>Android</strong>.
+                     Acesse aqui o site <a href="https://www.android.com/intl/pt_br/" rel="noopener noreferrer" class="externo">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema <strong>Android</strong>.
                     </p>
             </aside>
           
@@ -152,7 +152,7 @@
         </article>
     </main>
     <footer>
-      <p>Site criado por <a href="https://github.com/Lucas-Nascimento1809" target="_blank">Luca's Nascimento</a>, em treinamento através do <a href="https://www.cursoemvideo.com/cursos/" target="_blank">Curso em Vídeo</a>.</p>
+      <p>Site criado por <a href="https://github.com/Lucas-Nascimento1809" rel="noopener noreferrer">Luca's Nascimento</a>, em treinamento através do <a href="https://www.cursoemvideo.com/cursos/" rel="noopener noreferrer">Curso em Vídeo</a>.</p>
     </footer>
 </body>
 </html>
