--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <picture>
                 <source media="(max-width: 670px)" srcset="imagens/dan-droids-pq.png">
-                <img src="imagens" alt="Primeiro mascote do Android">
+                <img src="imagens/dan-droids-pq.png" alt="Primeiro mascote do Android">
             </picture>
 
             <p>
